# Zephyr-v3.1.0-smrk

./: .gitignore  Build.sh  FOO  GPIONotes.txt  How2Flash.template  KEY.tgz  MakeCS  README.SMRK  README.md  README.rst  UpdateVer  VERSION  smrk-key.pem
MyWork/newshell/: CMakeLists.txt  README.rst  prj.conf
MyWork/newshell/src/: Makefile  boardctl.c  commands.c  console.c  console.h  history.c  i2c.c  i2c.h  irps5401.c  led.c  lib.c  lib.h  pmbus.c  pmbus_cmds.c  shell.c  shell.h  vrails.c  vrails.h
MyWork/newshell/src/oldsrc/: irps5401.c  lib.c  vrails.c  vrails.h
MyWork/shell_mcuboot/: prj.conf
MyWork/shell_mcuboot/src/: boardctl.c  gpio.c  gpio.h  lib.h
MyWork/shell_module/: CMakeLists.txt  Kconfig  prj.conf
MyWork/shell_module/src/: boardctl.c  gpio.c  irps5401.c  irps5401.h  led.c  lib.c  lib.h  main.c  my2c.c  my2c.h  pmbus.c  pmbus.h  pmbus_cmds.c  pmbus_cmds.h  vrails.c  vrails.h
MyWork/smp_svr/: CMakeLists.txt  prj.conf
MyWork/smp_svr/src/: boardctl.c  gpio.h  irps5401.c  irps5401.h  lib.c  lib.h  main.c  my2c.h  pmbus.c  pmbus.h  pmbus_cmds.c  pmbus_cmds.h  vrails.c  vrails.h
SMRK-Release/: Build.sh  FlashCMD.sh  How2Flash.template  InitialFlash.template  Package.sh  analyze-mcuboot-img.py
SMRKConfig/: README  post-checkout  pre-commit  pre-push
TMP_WORK/SHELL_MCUBOOT/: CMakeLists.txt
TMP_WORK/SHELL_MCUBOOT/src/: boardctl.c  led.c  lib.c  main.c  my2c.c
boards/arm/smrk100g/: Kconfig.board  Kconfig.defconfig  board.cmake  smrk100g.dts  smrk100g_defconfig
kernel/: banner.c
subsys/shell/modules/: kernel_service.c
